# mcp-trove

./: .gitignore  CLAUDE.md  Containerfile  README.md  SECURITY.md  gourmand-exceptions.toml  gourmand.toml  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  container.yml  publish.yml  security.yml
.specify/memory/: constitution.md
.specify/specs/000-baseline/: spec.md
src/mcp_trove_crunchtools/: __init__.py  __main__.py  config.py  database.py  embedder.py  errors.py  extractor.py  indexer.py  models.py  server.py  vision.py
src/mcp_trove_crunchtools/tools/: __init__.py  index.py  search.py  status.py
tests/: conftest.py  test_extractor.py  test_indexer.py  test_tools.py  test_validation.py  test_vision.py
